<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/const1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_constraintBottom_toBottomOf="@id/tvNoAccount"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">


    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="@id/const1"
        app:layout_constraintBottom_toTopOf="@id/tvNoAccount"
        app:layout_constraintTop_toTopOf="@id/const1">

        <androidx.constraintlayout.widget.ConstraintLayout xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/dimen_12"
            tools:context=".LoginActivity">

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/btnCross"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_4"
                android:layout_marginTop="@dimen/dimen_4"
                android:backgroundTint="@color/white"
                android:src="@drawable/baseline_clear_24"
                android:onClick="onCloseButtonClick"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivLogo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_50"
                android:src="@drawable/group_50766"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_50"
                android:drawablePadding="@dimen/dimen_10"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ivLogo">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/outline_person_24"
                    android:drawablePadding="@dimen/dimen_10"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="58dp"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/til_email">


                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etPhone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_10"
                    android:maxLength="10"
                    android:hint="@string/enter_your_phone_number"
                    android:inputType="phone"
                    android:paddingStart="145dp"
                    tools:ignore="RtlSymmetry" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.hbb20.CountryCodePicker
                android:id="@+id/CountryCodePicker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:ccp_countryPreference="us,in"
                app:layout_constraintBottom_toBottomOf="@id/til_phone"
                app:layout_constraintStart_toStartOf="@id/til_phone"
                app:layout_constraintTop_toTopOf="@id/til_phone"

                />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_10"
                android:drawablePadding="@dimen/dimen_10"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/til_phone"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:cursorVisible="true"
                    android:drawableStart="@drawable/outline_lock_24"
                    android:drawableEnd="@drawable/outline_remove_red_eye_24"
                    android:drawablePadding="@dimen/dimen_10"
                    android:focusable="true"
                    android:hint="@string/password"
                    android:inputType="textPassword" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_OTP"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_10"
                android:drawablePadding="@dimen/dimen_10"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tilPassword">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_OTP"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:cursorVisible="true"
                    android:drawableStart="@drawable/baseline_domain_verification_24"
                    android:drawablePadding="@dimen/dimen_10"
                    android:enabled="false"
                    android:maxLength="6"
                    android:focusable="true"
                    android:hint="@string/enter_the_otp"
                    android:inputType="number" />
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvForgotPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_10"
                android:layout_marginEnd="@dimen/dimen_12"
                android:text="@string/forgot_password"
                android:textColor="@color/blue"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/til_OTP" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvGetOtp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/dimen_12"
                android:height="@dimen/dimen_50"
                android:backgroundTint="#DCDEEA"
                android:gravity="center"
                android:text="@string/get_otp"
                android:textColor="@color/primaryColorDark"
                android:textSize="@dimen/_15sp"
                android:textStyle="bold"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="@id/til_OTP"
                app:layout_constraintEnd_toEndOf="@id/til_OTP"
                app:layout_constraintTop_toTopOf="@id/til_OTP"


                />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnVerify"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_30dp"
                android:height="@dimen/dimen_50"
                android:backgroundTint="#DCDEEA"
                android:text="@string/verify_phone_number"
                android:textColor="@color/grey"
                android:enabled="false"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvForgotPassword" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_10"
                android:height="@dimen/dimen_50"
                android:backgroundTint="#DCDEEA"
                android:text="@string/log_in"
                android:enabled="false"
                android:textColor="@color/grey"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btnVerify" />


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvOR"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_15"
                android:layout_marginBottom="@dimen/dimen_15"
                android:text="@string/or"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btnLogin"

                />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnFacebook"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_50"
                android:height="@dimen/dimen_50"
                android:background="@drawable/round_button"
                android:backgroundTint="@color/background_button"
                android:drawableStart="@drawable/facebook"
                android:paddingStart="@dimen/dimen_27"
                android:paddingEnd="@dimen/dimen_25"
                android:text="@string/login_with_facebook"
                android:textColor="@color/white"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btnLogin"

                />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnGoogle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_30dp"
                android:height="@dimen/dimen_50"
                android:background="@drawable/round_button"
                android:backgroundTint="#FFFFFF"
                android:drawableStart="@drawable/google"
                android:paddingStart="@dimen/dimen_23"
                android:paddingEnd="@dimen/dimen_15"
                android:text="@string/login_with_google"
                android:textColor="@color/black"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btnFacebook" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_30dp"
                android:height="@dimen/dimen_50"
                android:background="@drawable/round_button"
                android:backgroundTint="@color/background_tint_login_phone"
                android:drawableStart="@drawable/phone"

                android:paddingStart="@dimen/dimen_25"
                android:paddingEnd="@dimen/dimen_22"
                android:text="@string/login_with_phone_number"
                android:textColor="@color/white"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btnGoogle"

                />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvNoAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/don_t_have_an_account_create_one"
        android:textAlignment="center"
        android:textSize="15sp"
        android:textColor="@color/text_no_account_login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"


        />

</androidx.constraintlayout.widget.ConstraintLayout>

