<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/const2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">




    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="@id/const2"
        app:layout_constraintStart_toStartOf="@id/const2"
        app:layout_constraintTop_toTopOf="@id/const2">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/dimen_15"
            tools:context=".SignUpActivity">

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/btnCross"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_4"
                android:layout_marginTop="@dimen/dimen_4"
                android:backgroundTint="@color/white"
                android:onClick="onCloseButtonClickSignUp"
                android:src="@drawable/baseline_clear_24"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvSignUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:text="@string/signup"
                android:textSize="@dimen/_30sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btnCross" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilFirstName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_50dp"
                android:drawablePadding="@dimen/dimen_10"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvSignUp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/firstNameLayout"
                        android:layout_width="@dimen/_0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:hint="@string/first_name">

                        <EditText
                            android:id="@+id/firstNameEditText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="text" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <View
                        android:layout_width="@dimen/dimen_10"
                        android:layout_height="@dimen/dimen_10" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/lastNameLayout"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:hint="@string/last_name"
                        app:hintTextAppearance="@style/CustomHintText">

                        <EditText
                            android:id="@+id/lastNameEditText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="text" />

                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilEmailSignUp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_10"
                android:drawablePadding="@dimen/dimen_10"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tilFirstName">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/outline_person_24"
                    android:drawablePadding="@dimen/dimen_10"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilPhoneSignUp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_10"
                android:visibility="visible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tilEmailSignUp">


                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etPhone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:hint="@string/enter_your_phone_number"
                    android:inputType="phone"
                    android:maxLength="10"
                    android:paddingStart="145dp"
                    tools:ignore="RtlSymmetry" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.hbb20.CountryCodePicker
                android:id="@+id/CountryCodePicker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="visible"
                app:ccp_countryPreference="us,in"
                app:layout_constraintBottom_toBottomOf="@id/tilPhoneSignUp"
                app:layout_constraintStart_toStartOf="@id/tilPhoneSignUp"
                app:layout_constraintTop_toTopOf="@id/tilPhoneSignUp"

                />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilPasswordSignUp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_10"
                android:drawablePadding="@dimen/dimen_10"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tilPhoneSignUp"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:cursorVisible="true"
                    android:drawableStart="@drawable/outline_lock_24"
                    android:drawableEnd="@drawable/outline_remove_red_eye_24"
                    android:drawablePadding="@dimen/dimen_10"
                    android:focusable="true"
                    android:hint="@string/passwordSignUp"
                    android:inputType="textPassword" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilConfirmPasswordSignUp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_10"
                android:drawablePadding="@dimen/dimen_10"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tilPasswordSignUp"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etConfirmPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:cursorVisible="true"
                    android:drawableStart="@drawable/outline_lock_24"
                    android:drawableEnd="@drawable/outline_remove_red_eye_24"
                    android:drawablePadding="@dimen/dimen_10"
                    android:focusable="true"
                    android:hint="@string/confirm_password"
                    android:inputType="textPassword" />

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/cbTerms"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_30dp"
                android:buttonTint="@color/primaryColor"
                android:clickable="true"

                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tilConfirmPasswordSignUp" />


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvTermsAndConditions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_25"
                android:padding="@dimen/dimen_10"
                android:text="@string/i_accept_terms_and_conditions_and_n_privacy_policies"
                android:textColor="@color/black"
                android:textSize="@dimen/_15sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/cbTerms"
                app:layout_constraintTop_toBottomOf="@id/tilConfirmPasswordSignUp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnContinue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_25"
                android:height="@dimen/dimen_50"
                android:background="@drawable/round_button"
                android:backgroundTint="@color/primaryColor"
                android:text="@string/continueSignUp"
                android:textColor="@color/black"
                app:layout_constraintTop_toBottomOf="@id/cbTerms"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
